added buttons to slides and tweeked positions.

--- a/css/components/components.css
+++ b/css/components/components.css
@@ -1,6 +1,6 @@
-﻿/*******************/
-/*   CSS Scripts   */
-/*******************/
-/* - buttons       */
-/* - icons         */
-/*******************/
+﻿/**************************/
+/* Components CSS Scripts */
+/**************************/
+/* - buttons              */
+/* - icons                */
+/**************************/
