--- a/css/layout/index.css
+++ b/css/layout/index.css
@@ -1,8 +1,9 @@
-/*******************/
-/*   CSS Scripts   */
-/*******************/
-/* - container     *//* - nav           *//* - header        *//* - content       *//* - footer        */
-/*******************/
+/**********************/
+/* Layout CSS Scripts */
+/**********************/
+/* - container        *//* - nav              *//* - header           *//* - content          *//* - footer           */
+/**********************/
+
 /*******************************/
 /*     container styles        */
 /*******************************/
