--- a/css/pages/pages.css
+++ b/css/pages/pages.css
@@ -1,10 +1,10 @@
-﻿/********************/
-/*   CSS Scripts    */
-/********************/
-/* - home           */
-/* - about          */
-/* - bios           */
-/* - areas          */
-/* - news_resources */
-/* - contact        */
-/********************/
+﻿/*********************/
+/* Pages CSS Scripts */
+/*********************/
+/* - home            */
+/* - about           */
+/* - bios            */
+/* - areas           */
+/* - news_resources  */
+/* - contact         */
+/*********************/
