--- a/Site.Master
+++ b/Site.Master
@@ -136,7 +136,7 @@
         <main>
             <asp:ContentPlaceHolder runat="server" ID="MainContent" />
         </main>
-        <footer class="page-footer clearfix">
+<%--        <footer class="page-footer clearfix">
             <div class="container">
                 <div class="row">
                     <div class="col l12 m12 s12">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer>--%>
     </form>
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
