--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -1,3 +1,11 @@
 ﻿/******************/
 /* Buttons styles */
 /******************/
+.btn {
+    padding: 15px 14px;
+    border: 2px solid #fff;
+    font-size: 15px;
+    border-radius: 2px;
+    /*height: 36px;*/
+    /*line-height: 36px;*/
+}
