--- a/css/layout/layout.css
+++ b/css/layout/layout.css
@@ -1,5 +1,5 @@
-﻿/*******************/
-/*   CSS Scripts   */
-/*******************/
-/* - container     *//* - nav           *//* - header        *//* - content       *//* - footer        */
-/*******************/
+﻿/**********************/
+/* Layout CSS Scripts */
+/**********************/
+/* - container        *//* - nav              *//* - header           *//* - content          *//* - footer           */
+/**********************/
