moved and hid slide indicators 1/30/2017

--- a/css/layout/layout.css
+++ b/css/layout/layout.css
@@ -1,4 +1,4 @@
-﻿/**********************/
+/**********************/
 /* Layout CSS Scripts */
 /**********************/
 /* - container        *//* - nav              *//* - header           *//* - content          *//* - footer           */
