--- a/css/components/components.css
+++ b/css/components/components.css
@@ -1,4 +1,4 @@
-﻿/**************************/
+/**************************/
 /* Components CSS Scripts */
 /**************************/
 /* - buttons              */
