--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -1,4 +1,14 @@
-﻿/*****************/
+/*********************/
+/* Pages CSS Scripts */
+/*********************/
+/* - home            */
+/* - about           */
+/* - bios            */
+/* - areas           */
+/* - news_resources  */
+/* - contact         */
+/*********************/
+/*****************/
 /*  home styles  */
 /*****************/
 .slider {
