--- a/Site.Master
+++ b/Site.Master
@@ -17,7 +17,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="js/modernizr-2.6.2.min.js" type="text/javascript"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <%--    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>--%>
     <script type="text/javascript" src="js/materialize.min.js"></script>
