--- a/css/base/index.css
+++ b/css/base/index.css
@@ -22,6 +22,15 @@ body, body form {
 body form main {
     flex: 1 0 auto;
 }
+
+header, footer, main, section, h1, h2, h3, h4, h5, h6, p, li, img {
+    -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    -webkit-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    -moz-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    -o-transition: width 1s ease-in-out, left 1.5s ease-in-out;
+    transition: width 1s ease-in-out, left 1.5s ease-in-out;
+}
+
 /*********/
 /* Fonts */
 /*********/
