--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -3,7 +3,7 @@
 /********************/
 footer.page-footer {
     width: 100%;
-    bottom: 0;
+    /*bottom: 0;*/
     background-color: #3a3a3c;
     margin: 0;
     padding: 0;
@@ -47,8 +47,14 @@ footer.page-footer {
 
 @media screen and (min-width: 601px) {
     footer.page-footer {
-        background: url(../../img/top-shadow.png) no-repeat center top;
+        background: url(../../img/bottom-shadow.png) no-repeat center top;
+        /*background: url(images/bottom-shadow.png) no-repeat center bottom;*/
         background-size: cover;
+    }
+
+    .page-footer .container {
+        margin: 0;
+        padding: 0;
     }
 
     .page-footer .container .row .col {
@@ -59,7 +65,8 @@ footer.page-footer {
     .page-footer .container .row .footer-copyright {
         background-color: transparent;
         margin: 0;
-        padding-top: 53px;
+        /*padding-top: 53px;*/
+        padding-top: 0;
         padding-bottom: 14px;
     }
 
