--- a/css/layout/index.css
+++ b/css/layout/index.css
@@ -84,6 +84,13 @@ nav {
         font-size: 16px;
     }
 
+@media screen and (min-width: 601px) {
+    nav .nav-column.col.l8.m7 > ul > li > a {
+        padding: 10px 6px 9px 6px;
+        font-size: 11px;
+    }
+}
+
 /********************************/
 /*       Header Styles          */
 /********************************/
@@ -173,7 +180,7 @@ header {
 /********************/
 footer.page-footer {
     width: 100%;
-    bottom: 0;
+    /*bottom: 0;*/
     background-color: #3a3a3c;
     margin: 0;
     padding: 0;
@@ -217,8 +224,14 @@ footer.page-footer {
 
 @media screen and (min-width: 601px) {
     footer.page-footer {
-        background: url(../../img/top-shadow.png) no-repeat center top;
+        background: url(../../img/bottom-shadow.png) no-repeat center top;
+        /*background: url(images/bottom-shadow.png) no-repeat center bottom;*/
         background-size: cover;
+    }
+
+    .page-footer .container {
+        margin: 0;
+        padding: 0;
     }
 
     .page-footer .container .row .col {
@@ -229,7 +242,8 @@ footer.page-footer {
     .page-footer .container .row .footer-copyright {
         background-color: transparent;
         margin: 0;
-        padding-top: 53px;
+        /*padding-top: 53px;*/
+        padding-top: 0;
         padding-bottom: 14px;
     }
 
