--- a/css/layout/nav.css
+++ b/css/layout/nav.css
@@ -72,3 +72,10 @@ nav {
         color: #ffffff;
         font-size: 16px;
     }
+
+@media screen and (min-width: 601px) {
+    nav .nav-column.col.l8.m7 > ul > li > a {
+        padding: 10px 6px 9px 6px;
+        font-size: 11px;
+    }
+}
